--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>sitweb</title>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <td>cell</td>
+            <td>cell</td>
+            <td>cell</td>
+        </tr>
+        <tr>
+            <td>cell</td>
+            <td>cell</td>
+            <td>cell</td>
+        </tr>
+        <tr>
+            <td>cell</td>
+            <td>cell</td>
+            <td>cell</td>
+        </tr>
+    </table>
 </body>
 </html>
