--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="C:\Users\simo\Pictures\802.jpg" alt="">
+    <img src="simo.jpg" alt="">
     <h1>This my website</h1>
 </body>
 </html>
